@@ -4,6 +4,7 @@ Changes for 1.3.3.1
 -Fixed a crash, caused by the incremental locked warps counter that leads BGO array exciting
 -Added support for Windows ARM64 target architecture
 -Added support for Apple Silicon target architecture
+-Fixed the inability to enter levels through warp were extension is missing
 
 Changes for 1.3.3
 -Added the "gameinfo.ini" to give the support for the partial customization of internals (window/game title, character names in menu, credits, etc.)
